[package]
name = "xfetch-wasm"
version = "1.0.0"
description = "Optimal Probabilistic Cache Stampede Prevention"
authors = ["Kan-Ru Chen <kanru@kanru.info>", "Frederic Charette <fredericcharette@gmail.com>"]
documentation = "https://docs.rs/xfetch"
homepage = "https://github.com/kanru/xfetch-rs"
repository = "https://github.com/kanru/xfetch-rs"
readme = "README.md"
keywords = ["cache", "xfetch", "wasm"]
categories = ["algorithms", "caching"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lru = "0.5"
xfetch = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
